<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BringActivity!</string>
    <string name="app_name">现在做什么</string>
	<string name="key">Keys</string>
	<string name="paper">Paper</string>
	<string name="cellphone">Cellphone</string>
	<string name="meal_card">Meal card</string>
	<string name="watch">Watch</string>
	<string name="reset">重置</string>
	<string name="add">添加项目</string>
	<string name="add_list">添加列表</string>
	<string name="close">关闭</string>
	<string name="add_item">添加项目</string>
	<string name="action_delete_list">Delete list</string>
	<string name="action_delete">Delete</string>
	<string name="action_remove_item">Remove item</string>
	<string name="action_move_to">Move to</string>
	<string name="action_rename">Rename</string>
	<string name="action_weekly_plan">Weekly plan</string>
	<string name="action_three_month_plan">Three month plan</string>
	<string name="action_goals">Goals</string>
	<string name="action_edit">Edit</string>
	<string name="action_sort_list">Sort</string>
	<string name="action_add_list">Add list</string>
</resources>