<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_add_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_list"/>
    <item
        android:id="@+id/action_sort_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_list"/>
    <item
        android:id="@+id/action_rename_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rename"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete"/>
</menu>
