<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
       android:id="@+id/action_add_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_list"/>
    <item
        android:id="@+id/action_sort_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sort_list"/>
    <item
        android:id="@+id/action_rename_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rename_list"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete"/>
        <item
        android:id="@+id/action_weekly_plan"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_weekly_plan"/>
</menu>
